# web-final

./: .gitignore  BUGFIXES.md  README.md  requirements.txt  start_dev.bat  项目要求.md
.claude/: settings.local.json
backend/: main.py  pyproject.toml  requirements.txt
backend/app/: main.py  wechat_parser.py
backend/app/api/: account_balance_history.py  accounts.py  auth.py  budget.py  budgets.py  categories.py  import.py  import_apis.py  reminders.py  reports.py  statistics.py  transactions.py
backend/app/api/v1/: wechat_import.py
backend/app/config/: database.py  settings.py
backend/app/core/: __init__.py  dependencies.py  exceptions.py  responses.py
backend/app/models/: __init__.py  account.py  account_balance_history.py  balance_verification.py  budget.py  category.py  category_suggestion.py  import_error_record.py  import_log.py  reminder.py  statistics_cache.py  transaction.py  user.py
backend/app/schemas/: account.py  category.py  import_log.py  reminder.py  transaction.py  user.py
backend/app/services/: account_balance_history_service.py  account_service.py  auth_service.py  balance_verification_service.py  category_service.py  import_error_analysis_service.py  import_service.py  intelligent_category_service.py  reminder_service.py  report_service.py  smart_categorization_service.py  transaction_service.py  wechat_bill_service.py
backend/app/utils/: __init__.py  export.py  jwt_utils.py  security.py
backend/migrations/: add_category_foreign_key.py  add_transaction_wechat_fields.py  add_wechat_import_tables.py
database/: README.md  init.sql  (+1 more)
(+74 files in other folders)
